--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
   background: var(--bg);
 }
 
-.heading {
+/* .heading {
   text-align: center;
   color: #fff;
   text-transform: uppercase;
@@ -54,7 +54,7 @@ body {
 .heading span {
   color: var(--main-color);
   text-transform: uppercase;
-}
+} */
 
 #btn {
   margin-top: 1rem;
@@ -238,6 +238,7 @@ body {
   color: #eee;
 }
 
+/* About Us */
 #about {
   padding: 2rem 7%;
 }
@@ -278,6 +279,7 @@ body {
     padding:2rem 7%;
 }*/
 
+/* Menu */
 #menu {
   padding: 2rem 7%;
 }
@@ -324,6 +326,7 @@ body {
   color: var(--black);
 }
 
+/* Products */
 #products {
   padding: 2rem 7%;
 }
@@ -387,6 +390,221 @@ body {
   font-size: 1.5rem;
 }
 
+/* Reviews */
+#reviews {
+  padding: 2rem 7%;
+}
+
+#reviews .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+#reviews .box-container .box {
+  border: var(--border);
+  /* border-radius: var(--border-radius); */
+  text-align: center;
+  /* position: relative;
+    z-index: 0; */
+  padding: 3rem 2rem;
+}
+
+#reviews .box-container .box p {
+  font-size: 1.6rem;
+  line-height: 1.8;
+  text-align: center;
+  color: #ccc;
+  padding: 2rem 0;
+}
+
+#reviews .box-container .box .user {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+#reviews .box-container .box h3 {
+  padding: 1rem 0;
+  font-size: 2rem;
+  color: #fff;
+}
+
+#reviews .box-container .box .stars i {
+  font-size: 1.5rem;
+  color: var(--main-color);
+}
+
+/* Contact Us */
+#contact {
+  padding: 2rem 7%;
+}
+
+#contact .row {
+  display: flex;
+  /* align-items: center; */
+  background: var(--black);
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+#contact .row .map {
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+#contact .row form {
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+
+#contact .row form h3 {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  color: #fff;
+}
+
+#contact .row form .inputBox {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background: var(--bg);
+  border: var(--border);
+}
+
+#contact .row form .inputBox span {
+  color: #fff;
+  font-size: 2rem;
+  padding-left: 2rem;
+}
+
+#contact .row form .inputBox input {
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  color: #fff;
+  text-transform: none;
+  background: none;
+}
+
+/* Blogs */
+#blogs {
+  padding: 2rem 7%;
+}
+
+#blogs .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+#blogs .box-container .box {
+  border: var(--border);
+}
+
+#blogs .box-container .box .image {
+  height: 25rem;
+  overflow: hidden;
+  width: 100%;
+}
+
+#blogs .box-container .box .image img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+
+#blogs .box-container .box:hover .image img {
+  transform: scale(1.2);
+}
+
+#blogs .box-container .box .content {
+  padding: 2rem;
+}
+
+#blogs .box-container .box .content .title {
+  font-size: 2.5rem;
+  line-height: 1.5;
+  color: #fff;
+}
+
+#blogs .box-container .box .content .title:hover {
+  color: var(--main-color);
+}
+
+#blogs .box-container .box .content span {
+  color: var(--main-color);
+  display: block;
+  padding-top: 1rem;
+  font-size: 2rem;
+}
+
+#blogs .box-container .box .content p {
+  font-size: 1.6rem;
+  line-height: 1.8;
+  color: #ccc;
+  padding: 1rem 0;
+}
+
+/* Footer */
+#footer {
+  padding: 2rem 7%;
+  background: var(--black);
+  text-align: center;
+}
+
+#footer .share {
+  padding: 1rem 0;
+}
+
+#footer .share a {
+  height: 5rem;
+  width: 5rem;
+  margin: 0.3rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  color: #fff;
+  border: var(--border);
+  border-radius: 50%;
+}
+
+#footer .share a :hover {
+  background-color: var(--main-color);
+}
+#footer .links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+  gap: 1rem;
+}
+
+#footer .links a {
+  padding: 0.7rem 2rem;
+  color: #fff;
+  border: var(--border);
+  font-size: 2rem;
+}
+
+#footer .links a:hover {
+  background-color: var(--main-color);
+}
+
+#footer .credit {
+  padding: 1.5rem;
+  font-size: 2rem;
+  color: #fff;
+  font-weight: lighter;
+}
+
+#footer .credit span {
+  color: var(--main-color);
+}
+
 /*media queries*/
 
 @media (max-width: 991px) {
@@ -432,6 +650,8 @@ body {
   #header .search-form {
     width: 90%;
     right: 2rem;
+
+    /* JNDBDBDHBDH */
   }
 
   #home {
@@ -451,6 +671,6 @@ body {
 
 @media (max-width: 450px) {
   html {
-    font-size: 55%;
+    font-size: 50%;
   }
 }
